--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,13 +105,12 @@ h6 {
     margin-left: auto;
     margin-right: auto;
 }
-
 .btn-solid-reg {
     display: inline-block;
     padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-    border: 1px solid #594cda;
+    border: 1px solid transparent; /* Transparent border */
     border-radius: 32px;
-    background-color: #594cda;
+    background: linear-gradient(90deg, #8a4ddd, #2575fc); /* Softer gradient from purple to blue */
     color: #ffffff;
     font-weight: 600;
     font-size: 0.875rem;
@@ -121,18 +120,17 @@ h6 {
 }
 
 .btn-solid-reg:hover {
-    border: 1px solid #594cda;
-    background-color: transparent;
-    color: #594cda; /* needs to stay here because of the color property of a tag */
+    background: linear-gradient(90deg, #2575fc, #8a4ddd); /* Reverse gradient on hover */
+    color: #ffffff;
     text-decoration: none;
 }
 
 .btn-solid-lg {
     display: inline-block;
     padding: 1.625rem 2.75rem 1.625rem 2.75rem;
-    border: 1px solid #594cda;
+    border: 1px solid transparent; /* Transparent border */
     border-radius: 32px;
-    background-color: #594cda;
+    background: linear-gradient(90deg, #8a4ddd, #2575fc); /* Softer gradient from purple to blue */
     color: #ffffff;
     font-weight: 600;
     font-size: 0.875rem;
@@ -145,93 +143,34 @@ h6 {
 }
 
 .btn-solid-lg:hover {
-    border: 1px solid #594cda;
-    background-color: transparent;
-    color: #594cda; /* needs to stay here because of the color property of a tag */
-    text-decoration: none;
-}
-
-.btn-solid-lg .fab {
-    margin-right: 0.5rem;
-    font-size: 1.25rem;
-    line-height: 0;
-    vertical-align: top;
-}
-
-.btn-solid-lg .fab.fa-google-play {
-    font-size: 1rem;
-}
-
-.btn-solid-lg.secondary {
-    border: 1px solid #eb427e;
-    background-color: #eb427e;
-}
-
-.btn-solid-lg.secondary:hover {
-    border: 1px solid #eb427e;
-    background: transparent;
-    color: #eb427e; /* needs to stay here because of the color property of a tag */
-}
-
-.btn-outline-reg {
-    display: inline-block;
-    padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-    border: 1px solid #252c38;
-    border-radius: 32px;
-    background-color: transparent;
-    color: #252c38;
-    font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 0;
-    text-decoration: none;
-    transition: all 0.2s;
-}
-
-.btn-outline-reg:hover {
-    background-color: #252c38;
+    background: linear-gradient(90deg, #2575fc, #8a4ddd); /* Reverse gradient on hover */
     color: #ffffff;
     text-decoration: none;
 }
 
-.btn-outline-lg {
+.btn-solid-sm {
     display: inline-block;
     padding: 1.625rem 2.75rem 1.625rem 2.75rem;
-    border: 1px solid #252c38;
+    border: 1px solid black; /* Black border */
     border-radius: 32px;
-    background-color: transparent;
-    color: #252c38;
+    background: transparent; /* Transparent background */
+    color: black; /* Black text */
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 0;
     text-decoration: none;
     transition: all 0.2s;
+    margin-right: 0.25rem;
+    margin-bottom: 1.25rem;
+    margin-left: 0.25rem;
 }
 
-.btn-outline-lg:hover {
-    background-color: #252c38;
-    color: #ffffff;
-    text-decoration: none;
+.btn-solid-sm:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* Slight black background on hover */
 }
 
-.btn-outline-sm {
-    display: inline-block;
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    border: 1px solid #252c38;
-    border-radius: 32px;
-    background-color: transparent;
-    color: #252c38;
-    font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 0;
-    text-decoration: none;
-    transition: all 0.2s;
-}
 
-.btn-outline-sm:hover {
-    background-color: #252c38;
-    color: #ffffff;
-    text-decoration: none;
-}
+
 
 .list .fas {
     color: #594cda;
@@ -295,6 +234,60 @@ h6 {
     height: 3.25rem;
     color: #7d838a;
 }
+
+/* Testimonials */
+.slider-1 .slider-container {
+    position: relative;
+}
+
+.slider-1 .swiper-container {
+    position: static;
+    width: 86%;
+    text-align: center;
+}
+
+.slider-1 .swiper-button-prev:focus,
+.slider-1 .swiper-button-next:focus {
+    /* even if you can't see it chrome you can see it on mobile device */
+    outline: none;
+}
+
+.slider-1 .swiper-button-prev {
+    left: -14px;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23707375'%2F%3E%3C%2Fsvg%3E");
+    background-size: 18px 28px;
+}
+
+.slider-1 .swiper-button-next {
+    right: -14px;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23707375'%2F%3E%3C%2Fsvg%3E");
+    background-size: 18px 28px;
+}
+
+.slider-1 .card {
+    position: relative;
+    border: none;
+    background-color: transparent;
+}
+
+.slider-1 .card-image {
+    width: 80px;
+    height: 80px;
+    margin-right: auto;
+    margin-bottom: 1.25rem;
+    margin-left: auto;
+    border-radius: 50%;
+}
+
+.slider-1 .testimonial-author {
+    margin-bottom: 0;
+    color: #252c38;
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+/* Testimonials end */
 
 select {
     /* you should keep these first rules in place to maintain cross-browser behavior */
@@ -859,3 +852,62 @@ a:hover.back-to-top {
     /* end of extra pages */
 }
 /* end of min-width 1200px */
+.video-responsive {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+  }
+  
+  .video-responsive iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .iframe-container {
+    width: 100%;
+    height: 400px;
+    overflow-y: auto; /* Enable scrolling */
+  }
+  
+  .iframe-container::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  .iframe-container::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
+  
+  .iframe-container::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
+  .iframe-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  .overflow-hidden {
+    overflow: hidden; /* Prevents scrolling */
+    height: 100%; /* Ensures the height is full */
+  }
+  
+  .triangle {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 30px solid #df0909ec; /* You can change the color */
+    margin-bottom: -15px; /* To move it closer to the heading */
+  }
+
+  .triangle-above-heading {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid #e5e7eb; /* gray-200 color */
+}
+  
+  
